# graph_traits

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bxlxConfig.cmake.in  is_it_a_graph_prettier.py
.github/workflows/: ubuntu.yml
example/: CMakeLists.txt  common.h  example1.cpp  example2.cpp  example3.cpp  main.cpp
include/bxlx/: graph  graph_traits.hpp
include/bxlx/algorithms/: bitset_iterator.hpp  constants.hpp  decisions.hpp  getters.hpp  interface.hpp  search.hpp  sort.hpp
include/bxlx/algorithms/detail/: bitset_iterator.hpp  constants.hpp  edge_iterator.hpp  edge_repr.hpp  getter_types.hpp  getters.hpp  node_iterator.hpp  node_set.hpp
include/bxlx/classify/: classify.hpp  member_traits.hpp  optional_traits.hpp  range_traits.hpp  type_classification.hpp  type_traits.hpp
include/bxlx/graph/: bitset_helper.hpp  execution.hpp  storage.hpp  traits.hpp
include/bxlx/graph/algorithms/: breadth_first_search.hpp
include/bxlx/graph/traits/: graph_traits.hpp  node.hpp  traits_impl.hpp  type_classification.hpp
include/bxlx/graph_old/: iterable_alg.hpp  storage.hpp
include/bxlx/graph_old/traits/: graph_traits.hpp  type_classification.hpp
include/bxlx/graph_traits/: execution.hpp  graph_traits_impl.hpp  iterable_alg.hpp
include/bxlx/graph_traits/algs/: breadth_first_search.hpp
include/bxlx/recognize/: assert_types.hpp  graph_traits.hpp  properties.hpp  recognize.hpp
prez/: index.html
test/: CMakeLists.txt  classification.cpp  connected.cpp  constexpr_node_static_asserts.cpp  example.cpp  femto_test.hpp  graph_test_static_asserts.cpp  graph_traits.cpp  graph_traits_queries.cpp  graph_traits_retrieval.cpp  state_machine.cpp  test.cpp  test_graphs.hpp  topology.cpp  type_static_asserts.cpp
